fix(ui-form-field): design alignment with form helper/error text
refs: INSTUI-1776

TEST PLAN:

- view TextInput to ensure the following:

- the FormFieldLabel should now be using the `lineHeightFit` so
  computing to 18px
- the FormFieldMessage (helper/validation text) is now displaying
  at 14px and should be slightly closer to the input than shows
  on the live docs

- note: test any/all of the other Form components to ensure
  these updates have not introduced a design regression

Reviewed-on: https://gerrit.instructure.com/178855
Tested-by: Jenkins
Product-Review: Chris Hart <chart@instructure.com>
QA-Review: Daniel Sasaki <dsasaki@instructure.com>

--- a/packages/ui-form-field/src/components/FormFieldMessages/styles.css
+++ b/packages/ui-form-field/src/components/FormFieldMessages/styles.css
@@ -1,7 +1,7 @@
 .root {
   padding: 0;
-  margin: 0;
   display: block;
+  margin: calc(-1 * var(--topMargin)) 0 0 0;
 }
 
 .message {
